--- a/vue/introdução/primeiro-app.html
+++ b/vue/introdução/primeiro-app.html
@@ -20,7 +20,7 @@
         new Vue({
             el: '#app',
             data: {
-                title: 'Aprendendo VueJs 2'
+                title: 'Olá Mundo'
             },
             methods: {
                 altTitle(e){
